# DNR1894_Noise_Reduction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1
docs/: convert_pdfs.py  links.txt  lm1894-model-reference.md
docs/markdown_output/: AN-0390.md  AN-384 Audio Noise Reduction and Masking.md  AN-386.md  lm1894.md
openspec/changes/lm1894-vst-plugin/: README.md  design.md  proposal.md  tasks.md
openspec/changes/lm1894-vst-plugin/specs/lm1894-noise-reduction-plugin/: spec.md
plugin/juce/Source/: Lm1894LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/app/: MeterState.h  PluginState.h
src/dsp/: CascadedFilterBank.h  Lm1894Model.h  SidechainDetector.h  VariableLpStage.h
src/params/: ParameterIds.h  ParameterLayout.h  PresetProfiles.h
tests/dsp/: test_dsp.cpp
tests/integration/: test_integration.cpp
